2004-04-27 Duncan Coutts <duncan@coutts.uklinux.net>

	* sourceview/Makefile,
	* glade/Makefile: added proprocessor pass for hierarchy.list

	* glade/Glade.chs: fix lib prefix

	* gtk/entry/EntryCompletion.chs, gtk/layout/Expander.chs,
	gtk/menuComboToolbar/ComboBoxEntry.chs,
	gtk/menuComboToolbar/ComboBox.chs: fix descriptions in headers

	* gtk/abstract/ButtonBox.chs, gtk/layout/HButtonBox.chs,
	gtk/layout/VButtonBox.chs, demo/buttonbox/Makefile,
	demo/buttonbox/ButtonBox.hs, AUTHORS: new widgets and demo
	contributed by Matthew Walton

	* gtk/abstract/Bin.chs: new (slightly pointless) abstract class

	* gtk/general/Gtk.hs: export new modules

	* gtk/general/Structs.hsc: bug fix for toResponse. Can now get
	response code back from dialogs ok.

	* gtk/abstract/FileChooser.chs, gtk/misc/FileChooserWidget.chs,
	gtk/windows/FileChooserDialog.chs, gtk/general/Gtk.hs,
	demo/filechooser/Makefile, demo/filechooser/FileChooserDemo.hs:
	added new FileChooser modules and a (unfinished) demo program

	* gtk/general/Gtk.hs: temporarily disable building
	FileChooserDialog, one of its dependancies has not been committed

2004-04-27 Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/Makefile: use standard $(CPP) variable

2004-04-27 Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/entry/Entry.chs: added new gtk 2.4 methods

	* gtk/entry/EntryCompletion.chs, gtk/layout/Expander.chs,
	gtk/menuComboToolbar/ComboBox.chs,
	gtk/menuComboToolbar/ComboBoxEntry.chs: new gtk 2.4 modules

	* gtk/general/Gtk.hs: export new gtk 2.4 modules

	* gtk/Makefile: added proprocessor pass to hierarchy.list before
	so we can selectively generate types depending on the gtk version.

	* tools/hierarchyGen/TypeGen.hs: allow to read stdin

	* tools/hierarchyGen/hierarchy.list: change comments style to be
	compatible with preprocessor and add some new gtk 2.4 classes

2004-04-24 Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/abstract/Object.chs: fixed warning

2004-04-18 Axel Simon <A.Simon@kent.ac.uk>